@@ -124,7 +124,8 @@ class LXD(Backend):
             return False
 
     def _convert(self, source_tarball, target_tarball):
-        creation_time = source_tarball.getmember("chroot-autobuild").mtime
+        first_entry = next(iter(source_tarball))
+        creation_time = first_entry.mtime
         metadata = {
             "architecture": self.lxc_arch,
             "creation_date": creation_time,
@@ -147,11 +148,15 @@ class LXD(Backend):
 
         # Mangle the chroot tarball into the form needed by LXD: when using
         # the combined metadata/rootfs form, the rootfs must be under
-        # rootfs/ rather than under chroot-autobuild/.
+        # rootfs/ rather than under chroot-autobuild/ or anything else.
         for entry in source_tarball:
             fileptr = None
             try:
-                orig_name = entry.name.split("chroot-autobuild", 1)[-1]
+                orig_name_bits = entry.name.split("/", 1)
+                if len(orig_name_bits) > 1:
+                    orig_name = "/" + orig_name_bits[1]
+                else:
+                    orig_name = ""
                 entry.name = "rootfs" + orig_name
 
                 if entry.isfile():
@@ -162,8 +167,7 @@ class LXD(Backend):
                 elif entry.islnk():
                     # Update hardlinks to point to the right target
                     entry.linkname = (
-                        "rootfs" +
-                        entry.linkname.split("chroot-autobuild", 1)[-1])
+                        "rootfs/" + entry.linkname.split("/", 1)[-1])
 
                 target_tarball.addfile(entry, fileobj=fileptr)
             finally:
